[package]
name = "dispnet-hash"
description = "Hash Library used for Dispnet"
homepage = "https://github.com/Chtau/dispnet-hash"
repository = "https://github.com/Chtau/dispnet-hash"
version = "0.2.0"
edition = "2021"
license = "MIT"
authors = ["Christoph Taucher <taucher.ch@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blake3 = "1.3.1"
crc = "3.0.0"
rust-argon2 = "1.0"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "dispnet_hash_benchmark"
harness = false